# flow_kafka2minio_min

./: Dockerfile  README.md  deploy.py  flow.py  pyproject.toml  requirements.txt
.github/workflows/: prefect-CICD.yaml  test-prefect-CICD.yaml
flows/: deploy.py  flow.py
src/: logic.py
tests/: test_import.py  test_logic.py
